# libclang-ng

./: .gitignore  README.md  hatch_build.py  justfile  pyproject.toml
.github/workflows/: linux-aarch64.yml  linux-amd64.yml  macos-amd64.yml  macos-arm64.yml  windows-aarch64.yml  windows-amd64.yml
python/clang/: __init__.py
scripts/: build-linux-aarch64.sh  build-linux-amd64.sh  build-macos-amd64.sh  build-macos-arm64.sh  build-windows-aarch64.ps1  build-windows-amd64.ps1  download-llvm.sh  free-disk-space.sh  update-python.sh
scripts/data/: clang_bindings_19.patch  clang_bindings_20.patch  clang_bindings_21.patch  clang_bindings_22.patch
tests/: conftest.py  test_bundled_headers.py  test_bundled_library.py
