[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libclang-ng"
dynamic = ["version"]
description = "Clang Python Bindings, mirrored from the official LLVM repo: https://github.com/llvm/llvm-project/tree/main/clang/bindings/python."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache License 2.0"}
authors = [{name = "kunitoki", email = "kunitoki@gmail.com"}]
keywords = ["Clang", "Python", "Bindings"]
requires-python = ">=3"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Documentation = "https://libclang-ng.readthedocs.io"
Source = "https://github.com/kunitoki/libclang-ng"
Tracker = "https://github.com/kunitoki/libclang-ng/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-xdist>=3.8.0"
]

[tool.hatch.version]
path = "python/clang/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["build/src/clang"]
ignore-vcs = true

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["build/src/", "README.md", "LICENSE"]
